# sentimaniac

./: .gitattributes  README.md  justfile  pyproject.toml
assets/: ASSETS.md
datasets/: test.csv  testdata.manual.2009.06.14.csv  train.csv  training.1600000.processed.noemoticon.csv  twitter_training.csv  twitter_validation.csv
model/: model_making.py  model_using.py  sentimaniac.pkl
src/sentimaniac/: data_analysis.ipynb  main.ipynb  main.py  mainv2.ipynb  mainv2.py
